[gd_scene load_steps=10 format=2]

[ext_resource path="res://SelectPlayer/Select.gd" type="Script" id=1]
[ext_resource path="res://Assets/selectCharacterSpiderBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/selectCharacterSpiderBlueUnavaliable.png" type="Texture" id=3]
[ext_resource path="res://Assets/selectCharacterSpiderGreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/selectCharacterSpiderYellow.png" type="Texture" id=5]
[ext_resource path="res://Assets/selectCharacterSpiderYellowUnavaliable.png" type="Texture" id=6]
[ext_resource path="res://font/FreePixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/FliperamaComBotoesIndisponiveis.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 7 )

[node name="Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 965, 538 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="Aranha1" type="TextureButton" parent="ColorRect"]
margin_left = -790.0
margin_top = -1250.0
margin_right = 578.0
margin_bottom = -562.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aranha2" type="TextureButton" parent="ColorRect"]
margin_left = 1350.0
margin_top = -1250.0
margin_right = 2718.0
margin_bottom = -562.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 3 )

[node name="Aranha3" type="TextureButton" parent="ColorRect"]
margin_left = 280.0
margin_top = -100.0
margin_right = 1648.0
margin_bottom = 588.004
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="Texto" type="Label" parent="."]
margin_left = 772.0
margin_top = 85.0
margin_right = 1695.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/Aranha1" to="." method="_on_Aranha1_pressed"]
[connection signal="pressed" from="ColorRect/Aranha2" to="." method="_on_Aranha2_pressed"]
[connection signal="pressed" from="ColorRect/Aranha3" to="." method="_on_Aranha3_pressed"]
